<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/score_list_layout_paddingStart"
    android:paddingTop="@dimen/score_list_layout_paddingTop"
    android:paddingEnd="@dimen/score_list_layout_paddingStart"
    tools:context=".ScoreList">

    <!-- title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/score_list_textView_height"
        android:background="@drawable/question_container"
        android:gravity="center"
        android:text="@string/score_list_highest_score"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/score_list_layout_paddingTop"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="5">

        <!-- list of scores -->
        <ListView
            android:id="@+id/ScoreListView"
            android:layout_width="@dimen/score_list_ListView_width"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/score_list_ListView_margin"
            android:layout_weight="3"
            android:background="@color/score_list_black" />

        <!-- container of buttons -->
        <LinearLayout
            android:layout_width="@dimen/score_list_layout_width"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="@dimen/score_list_layout_paddingTop"
            android:paddingEnd="@dimen/score_list_layout_paddingTop">

            <!-- sort by score button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_list_button_height"
                android:layout_marginBottom="@dimen/score_list_button_margin"
                android:background="@drawable/inputbutton"
                android:gravity="center"
                android:onClick="scoresBy"
                android:text="@string/score_list_toScore"
                android:textAllCaps="false"
                android:textColor="@drawable/inputbuttontextcolor" />

            <!-- sort by date button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_list_button_height"
                android:layout_marginBottom="@dimen/score_list_button_margin"
                android:background="@drawable/inputbutton"
                android:gravity="center"
                android:onClick="historyBy"
                android:text="@string/score_list_toDate"
                android:textAllCaps="false"
                android:textColor="@drawable/inputbuttontextcolor" />

            <!-- clear all scores button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/score_list_button_height"
                android:layout_marginBottom="@dimen/score_list_button_margin"
                android:background="@drawable/inputbutton"
                android:gravity="center"
                android:onClick="deleteScore"
                android:text="@string/score_list_clear"
                android:textAllCaps="false"
                android:textColor="@drawable/inputbuttontextcolor" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>